@@ -1,35 +1,38 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX timezone-data-2008h-makefile.patch 4037 RMD160 b7b9926ccee050dd18f2c33f2654a0b6dc4d35e0 SHA1 281539ae7f6fd804fc1e7ec9533552fa7fd50d88 SHA256 fc496b869ed6b70c60b0fcdea0a176e31c9405c96e6bf73b5edc26339de66c39
-AUX timezone-data-2012a-makefile.patch 4022 RMD160 81bb668ca5ca5fb338d0d7369db23fa7023b9ce3 SHA1 d5b2538fa088d13748c2277c7bf1b2c454dc134e SHA256 4bbcd3fa36ee6b2506df766b0f283826fd5bd2402b24aa25845971e8f38b51e2
-DIST tzcode2011i.tar.gz 135022 RMD160 c37e7813867af0f20d9cbf60ff1d7f0741ebba1d SHA1 4f58cede47df8bba55b37982d8b38cd65266d412 SHA256 f0dd991de3f8d6c599c104e294377c9befa1ef40aa5a1d09e2e295a453f3c1ec
-DIST tzcode2012a.tar.gz 135103 RMD160 b498355392e7e141e12fc4ca3592cfec6e96ef00 SHA1 80e0c9efb067950f34826d0708ff61e72e019da5 SHA256 27b742eb8700cafd5eea06cd0c3781b9a23a2c1e5647728efc1b7048cb7f88a3
-DIST tzcode2012b.tar.gz 135075 RMD160 25acce807c9e19d8294fe4dd8eac08fba9d796af SHA1 7172f71a23fb6fe8f99099f810d05366ed5d7130 SHA256 4345a2de239a7b6e5ab286052cc269eb07d63798ae14ba715eb4c6bdfa0f3350
-DIST tzdata2011n.tar.gz 204684 RMD160 4a2a06ada05aca1ea99767caa1b23c6fcb88bcd3 SHA1 5435fae9844dc89f9d418aa956e161e23d1babdf SHA256 a343e542486b2b8ebdeca474eed79f1c04f69420ca943c2b9bdea1d2385e38cd
-DIST tzdata2012a.tar.gz 207574 RMD160 b95722a2d42744bb217e11ace7b5bc7195f86d77 SHA1 5bd828d0845937da92c0518060a4aa8fbad81f8d SHA256 c28f731e19e7b612e26b2a41e9089ebe0c67bad422d2b7882e4b32983277ee7d
-DIST tzdata2012b.tar.gz 207782 RMD160 b58bb8a633b664f5babed8a6681ecc25a039733d SHA1 cd7c43bf8ccf56d174a2b85d2da35e83fd8f1107 SHA256 2f9f8e2d1ae087be5917f60c3946e8dc3fe1068d7738c3395f2125135309e745
-DIST tzdata2012c.tar.gz 206206 RMD160 cf38b711231e0ddba2b4c0f7be4d18658d751774 SHA1 e0cd9c2cc0ac8d90ed842133b910d4bb3bc1a6dd SHA256 33e19e1dd27bda5239812587d72971509a15b59baff7abd692b77ff66f168a82
-EBUILD timezone-data-2011n.ebuild 3140 RMD160 83a5fb739aaee8258c1f65abf7b283524d178a51 SHA1 15d5530d9079478a9fcdb93cc75669e76b9312b7 SHA256 382ca5ff92759e7fd37355ee30d3ad7fdfebc4290a2c3f9ac38063ec3f2681e1
-EBUILD timezone-data-2012a.ebuild 3149 RMD160 2b0a66439594374adfb04ed1edb19107a20949ae SHA1 3f1ee03b9e097aea4457adaa2158d6e94f98213e SHA256 53c0bb7aee50f6131a710ba773598896d727577f2eda4d0778954b17342fe86e
-EBUILD timezone-data-2012b.ebuild 3149 RMD160 aeaa17a422eec993b60ebc030cf4774effded5f1 SHA1 504447d19e08cfb3cc0ff573a101a56c47519915 SHA256 53c3da8b922bd52c86a3a64d538d8039563e10b2c2e7edfa580ddb948d1ab75b
-EBUILD timezone-data-2012c.ebuild 3296 RMD160 9638574dd11de723f14a814ba54f7e1ed1be9d71 SHA1 b7c1eeb82bb4355c2d5540e5210a0aea02e98594 SHA256 14d4cd7a31b235acd859195a4c4a13ed7fa7459ebab7e7eab06ab149374c128f
-MISC ChangeLog 35507 RMD160 f07e191e15b1b04006e885ef5ed603d4bde05cae SHA1 234d8b46d1b31055097b6bbb8d7bdff8401d9b85 SHA256 74afc271ae33e4ca942467c45831fb32973f7a7fb1842d5de5191251fde3a911
-MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
+AUX timezone-data-2008h-makefile.patch 4037 SHA256 fc496b869ed6b70c60b0fcdea0a176e31c9405c96e6bf73b5edc26339de66c39 SHA512 85871ce688d529660ad8948ebf73918fdada5d950abbd9f33241d2d89e6df521223f7a1a24369c00b3f7258ce41bf296ee6f04cf2b91d0591d08640d06a6e4d6 WHIRLPOOL ade3e7e17318abf2e4989c4d673f643ebcbd787f26719c22ca0f90ba8b70d293c9f99334f6594fc1eaa2ef233539bed3ff0b5f20d9042b990f5ec4671432a8ee
+AUX timezone-data-2012a-makefile.patch 4022 SHA256 4bbcd3fa36ee6b2506df766b0f283826fd5bd2402b24aa25845971e8f38b51e2 SHA512 cddf38b690d1631d26f9d338bdf55e48692e240437d999fb494043ae24dd2b3167de9244f94e10605dba990777e20e886ba6f30429a6855286996004551dcc23 WHIRLPOOL dc92fd0dadd20e0f6504c7ce4dd736854e683336e08168f62badcdf6d1730ce830791f10ad71aee614760df4c89f6bf826101df7291994c736022d2d3d9c1d1b
+DIST tzcode2011i.tar.gz 135022 SHA256 f0dd991de3f8d6c599c104e294377c9befa1ef40aa5a1d09e2e295a453f3c1ec
+DIST tzcode2012a.tar.gz 135103 SHA256 27b742eb8700cafd5eea06cd0c3781b9a23a2c1e5647728efc1b7048cb7f88a3
+DIST tzcode2012b.tar.gz 135075 SHA256 4345a2de239a7b6e5ab286052cc269eb07d63798ae14ba715eb4c6bdfa0f3350
+DIST tzcode2012c.tar.gz 135542 SHA256 f06d9f80707c7658a4646b8ff1fdf91c6f4c83085498aab5cc3ee6f7409bb7e8 SHA512 a75dea4e8508475daeefef5f0a7a61f9b44441bd2ea4856f60ad17d2c2680596fb459eb900b2f1c6a39fdcb3f69f867d47bdcb9b7646c928915a5526e22dcb47 WHIRLPOOL 360de882cf5ec8ebcbb28d76fd6f068072596cee6b63d0aaca7dd2a8cc021c372f06837a453a0d0e22dae3165cf9b983948b8e6962a927c162b6791c4e4cd1af
+DIST tzdata2011n.tar.gz 204684 SHA256 a343e542486b2b8ebdeca474eed79f1c04f69420ca943c2b9bdea1d2385e38cd
+DIST tzdata2012a.tar.gz 207574 SHA256 c28f731e19e7b612e26b2a41e9089ebe0c67bad422d2b7882e4b32983277ee7d
+DIST tzdata2012b.tar.gz 207782 SHA256 2f9f8e2d1ae087be5917f60c3946e8dc3fe1068d7738c3395f2125135309e745
+DIST tzdata2012c.tar.gz 206206 SHA256 33e19e1dd27bda5239812587d72971509a15b59baff7abd692b77ff66f168a82
+DIST tzdata2012d.tar.gz 206219 SHA256 46c0e92a7aa89c3cfe571b585ceb6958bb444604aea3e09587f2cbe474c95575 SHA512 02f4ae5c3a685d688bedc0c173f4eed517cff8018e1fc94eeeafff355c90b40db3f9a52891b66960ce28de323aed2a4b196e933f20afbfbf3dcf787ab0e161f6 WHIRLPOOL 75637238fd8f52b8e556280770158fa28d4496d32cccf9cfbd2086c5c4263da7936b73280413117e8b79e876cbb4ed6d3a92c0b13c41be1625450bf981ee026f
+EBUILD timezone-data-2011n.ebuild 3140 SHA256 382ca5ff92759e7fd37355ee30d3ad7fdfebc4290a2c3f9ac38063ec3f2681e1 SHA512 a5a6db9d6ebe425174f83560fed5b949559c9cfadacc2a73adbfd3637d38cffa452453aaa90e29f0424126596c8ac4cee1bf8a8a6dbc66343117d5acd1f0e02c WHIRLPOOL c307ed3e521cddf3a18305c4eb8ecc5badfad6c5b8339402cd3fac3fba3861f59bde65c06b30769a75196bb35ed7dc12227882ca3193ab27aad0e95de9daa5ee
+EBUILD timezone-data-2012a.ebuild 3149 SHA256 53c0bb7aee50f6131a710ba773598896d727577f2eda4d0778954b17342fe86e SHA512 a591c8e323abf2cb9cf460c07259d440d310f624faef058192c198e1586fb95f45026a5edf3a6e22dd9fae787afe34382184d7a6920b448e9383f78df1b964ff WHIRLPOOL a6b086a3278b6fd92a3120c304f635eb5fd0c7560f22f29e0958330be0b3795c06f720e676f5c3ea72944d6995988900c024f9645ba73834b8a1a30182288a7b
+EBUILD timezone-data-2012b.ebuild 3149 SHA256 53c3da8b922bd52c86a3a64d538d8039563e10b2c2e7edfa580ddb948d1ab75b SHA512 496b0b42f94e0a39472b31da8f5a7b7461f35bfbfc7e7a7750756bdb20007a741abae51bdc453c107f4e4eb66dc1ae66005758c1e7108dc42d61075bf7501789 WHIRLPOOL 21ef73a6bb231f3b1072535d171646cee22edade478f92a289c8806d2436e457d89568b81e199db3bf40d0b966d4537f8f7e9b21d3891634648e3e466ae9f91c
+EBUILD timezone-data-2012c.ebuild 3296 SHA256 14d4cd7a31b235acd859195a4c4a13ed7fa7459ebab7e7eab06ab149374c128f SHA512 853c4acc52d3e208dd643b2582d5acb41250fe1222f73e533626f4836f6d6364faf3ee3d6aa7b4149300445a55cd56b04068ca22f8e9b8b3c54f34433474cadc WHIRLPOOL 20dfb4c634f1d9c1f84db12cae048837170dcd8fadc1cd08a422c22efa969dc201a0e78813e3904368ce0495ed160b96c72e8aa9d8d196fb1cc007ff0d8d7465
+EBUILD timezone-data-2012d.ebuild 3308 SHA256 d82682c9b46443db3e982e851b3c7d82c0281b8fa243eb8f539cb6b5063d8296 SHA512 9b3b579f3e0fc3d8af26dd5649fa1e311375319660e9ae620b50403b3ac8b73f611b26ab8c405dd54e2c1f632d1e4db219ff4242ceb1ae26b99ce44d498940ca WHIRLPOOL efcbffda692aab3ff8521f6ca6d0b2355e79928f58f978cfadb45b3142e4efa867d248be2f3b7ba3aef9010fc45fcda6d0a36716fc50c25e88fb09f22ba2235b
+MISC ChangeLog 35639 SHA256 f7dacb204849dc5576d19027ff4a760488e6910524a17466c05faf379852da98 SHA512 477f65fce1494fbf4e37b2bf0133c23839694da4b510455eed36e7e98dfdee834fe1fbd6adfecccd91ecc5b4d87db313bf4cce1c5e51a8dd26071f7f44b7e31a WHIRLPOOL d09e7a1e33c9ee47dbe9ee52641392456f35669a1a69fa16efff98185641e44c73951b8066f35276b80973b3412cebd816ec551b28527a2dae52a2977f6fe782
+MISC metadata.xml 162 SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a SHA512 2a857e10b277827773a6c7967e070d7bfff23d75f44fa4d4fa8a7339df3225e6dba512a865d91c9c55bdb013dafdce85dface1b845acfbb5473e232666cdda45 WHIRLPOOL f7586c1570803b3e646f0be89ba6c767e82ec6889ef92d15f62a38f1410ed9d82c36892e5e83f694471959783d0d5ad667f1a39b7eb51f2080c269d5fa23d819
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPtCMzAAoJELEHsLL7fEFWe+EP/3K9TKuHAP03Hm2fX1bJhpuA
-KGJNHwgrIlk8CBlQciaK3dlkb3Oz8YU40u4Ne0qfKOK5pD0z/spprFxtDss4RQ9p
-3AzqnNcYW01TkLsCJjG5HMO6mj8DoEab6a2Lq9UpDNPuaiymXExZG8GEWz+Ncr6w
-gsSekFxwhBy5YnJOdppzry3CQq3qnCFWebRwUFL4LMlGC9LJZj2zGXHFTi+NFs0y
-nERYtJvtUgHxtNvaGMAwcvqCNSJXxxHKTqOepTdC51bnlyNWCpMK1zbQZYMQWwdv
-s7sf3o1YOUqia+vgy8/iXm8ift8slTBOcXhk4Z7YGcSvNikxMg8/92+O/S6CMXxP
-qK+S0zZFhSRW/TeGn+rp/R2SGmsgfVe06v2rwwlduSyvYMm4/8rYM6Ax/tJvvegZ
-TohOp/ckqgMWBchtDD2kui27qQhqy0tqoZsCr7nKnR1cXLuMqT6brULY2mWq9/Ur
-Ai2S6QeOgDhMU+2dmLCamdWv65/N8bwbhAmOiVynsKyLFFpvP0aBEA80IVxaAbBC
-lzHVoyMtRQNBuKQ5aXfpLHMJMnJaLEmMMgGFAbDLjsXdk1n3HKNsOEMOQtcqvfIb
-NkmWxLwTC009ARR9vuJSTKAD36QczFGWPUkL64RLZKBPEA2gvsbqN5NaUx1Fyr3K
-Hmcpz6NuxSJPqy0QLm3v
-=mQ0V
+iQIcBAEBAgAGBQJQCW3tAAoJELEHsLL7fEFW6iIQAJeW3GSoGylFfw+DHfUw49br
+5Tuaa34IwYMIFbHr1myeIhks+uiGYKUR8ni6au2xnJE351WbNW6k3cewhHxffZv4
+UNoucZHuRKWQxjbSDUzi2B3hS0jK6m40WanO6+55x6+3eE+95vPZMVjOqF9R5vpj
+COzcKIHUEU1qaxuFH4VpzfEVhOQZ493GJOTDfGOaRbGHut6CP4dv4iYwPaUND8xP
+c3YpySXqwGeps3F0ZqZnmAeMRlmVy/taJ+zEda5k8XWpnIPYX+kL2kS79afqiTt7
+V75jNGqBGEJZHHCMTd5ibNbRoSnSlIUwXI6C/7cePM8ncPWSNN0BNCYy8dDEN5xG
+tYRRG/43ejfWvCD0Z58qzte9g5JxV2m5lJVTezH7TmXdr4cv+EhAWSejoIH1SQc+
+b+8JhJfclnWyGfGoPfovki4vxAzh1abPTVhS1wYwtlC1aI518wq/VpBThxzr8Z0Z
+/pcI6LRhWL0NkEwISC7ncPYWelZ6D3MoMmfbfZZrHBa+7SPM43NblM98/Qjk7Gd8
+HBL2axlJYrU2KKkEd5SFUsz/TXF+sMReyH6V/x5Or2xp605nuWFEMjz2dDyvUBx8
+dRPokk0gTFF5mrjNwTmxIVsgpw1BiKKRhzol/lib/+FG/aLA78DlcjkC8Pk5awY3
+zNQL8y/LU0V4sgTaguLk
+=sy4G
 -----END PGP SIGNATURE-----
