@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.269 2012/05/16 21:58:46 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.270 2012/07/20 14:40:04 vapier Exp $
+
+*timezone-data-2012d (20 Jul 2012)
+
+  20 Jul 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012d.ebuild:
+  Version bump.
 
   16 May 2012; Mike Frysinger <vapier@gentoo.org> timezone-data-2012c.ebuild:
   Update HOMEPAGE/SRC_URI to include new IANA site #416311 by Larry Gilbert.
